1.4.31 2015-02-16
-----------------
- Upgraded kerberos version to 0.0.9 to support node.js 0.12.0 and io.js 1.10.0

1.4.30 2015-02-02
-----------------
- NODE-360 Aggregation cursor and command correctly passing down the maxTimeMS property.

1.4.29 2014-01-21
-----------------
- Updated kerberos to support io.js/node with nan 1.5.1.
- NODE-352 Fixed race-condition for createCollection.

1.4.28 2014-01-06
-----------------
- NODE-293 fixed issue for insert on fullResult return due to getRawResponse called incorrectly.

1.4.27 2014-01-05
-----------------
- Changed how the ServerCapabilities is populated in the driver to ensure it's always correctly added on High availability checking on ReplSet and Mongos.

1.4.26 2014-12-22
-----------------
- Minor fixes to listCollections to ensure correct querying of a collection when using a string.

1.4.25 2014-12-18
-----------------
- listCollections filters out index namespaces on < 2.8 correctly
- Use returned ns for getmores when doing command cursors.

1.4.24 2014-12-18
-----------------
- Refactored listCollections to return cursor to support 2.8 features correctly.
- Added new listIndexes helper that returns a cursor to support 2.8 features.
- Bumped kerberos to 0.0.7 to correctly compile across win/linus/osx

1.4.23 2014-12-05
-----------------
- Fixed minor replicaset reauthentication issues for High availability process.
- Added support for authdb as option for Db.prototype.logout to logout against another db than the current one when authSource has been used.
- Backported 2.0.X test suite to minimize maintenance between 1.4.x branch and 2.0.x.
- Fixed bug on 2.4.x servers when using aggregation cursor and close happens on server connection
- Updated kerberos library to 0.0.6

1.4.22 2014-11-20
-----------------
- NODE-184, Correct message size validation

1.4.20 2014-11-14
-----------------