@@ -701,6 +701,7 @@ Server.prototype.connect = function(dbInstance, options, callback) {
       server._emitAcrossAllDbInstances(server, eventReceiver, "parseError", server, null, true);
       // Emit close event
       server._emitAcrossAllDbInstances(server, eventReceiver, "close", new Error("connection closed"), null, true);
+    }
   });
 
   // Boot up connection poole, pass in a locator of callbacks
