@@ -1023,3 +1023,42 @@ exports.shouldFilterCorrectlyWithIndexDuringList = {
     });
   }
 }
+
+/**
+ * @ignore
+ */
+exports['Should correctly list multipleCollections'] = {
+  metadata: { requires: { topology: ['single', 'replicaset', 'sharded', 'ssl', 'heap', 'wiredtiger'] } },
+
+  // The actual test we wish to run
+  test: function(configuration, test) {
+    var db = configuration.newDbInstance(configuration.writeConcernMax(), {poolSize:1});
+    db.open(function(err, client) {
+      test.equal(null, err);
+
+      var emptyDb = db.db('listCollectionsDb');
+      emptyDb.createCollection('test1', function(err) {
+        test.equal(null, err);
+
+        emptyDb.createCollection('test2', function(err) {
+          test.equal(null, err);
+
+          emptyDb.createCollection('test3', function(err) {
+            test.equal(null, err);
+
+            emptyDb.listCollections().toArray(function(err, collections) {
+              test.equal(null, err);
+
+              console.log("------------------------------------------------")
+              console.dir(collections)
+              process.exit(0)
+              db.close();
+              test.done();
+            });
+          });
+        });
+      });
+    });
+  }
+}
+
